@@ -20,15 +20,16 @@ Before you start, you'll need to create an Application in [Dashboard](https://ww
     </dependency>
 ```
 
-## Building and running your example server-app
+## Building your example server-app
 1. In Dashboard edit the "Callback URL" field with the URL pointing to your /login endpoint.
-`Ex. https://mydomain.com/login`. Note that your endpoint must be visible on the Internet.
+`Ex. https://mydomain.com/login`. Note that your endpoint must be accessible on the Internet.
 1. Edit the `resources/application.yml` and replace the `yoti-client-sdk-id-from-dashboard` value with the `Yoti client SDK ID` you can find in Dashboard.
 1. Download your Application's key pair from Yoti-Dashboard and copy it to `resources/app-keypair.pem`.
 1. Run `mvn clean package` to build the project.
 
 ## Running
 * You can run your server-app by executing `java -jar target/yoti-sdk-spring-boot-example-1.3.jar`
+  * If you are using Java 9, you can run the server-app as follows `java -jar target/yoti-sdk-spring-boot-example-1.3.jar --add-exports java.base/jdk.internal.ref=ALL-UNNAMED`
 * Your endpoint is listening under `https://localhost:8443/login`.
 
 In order to receive calls on your /login endpoint, you need to expose your server-app to the outside world. We require that you use the domain from the Callback URL and HTTPS.
